--- a/lib/kamansky_web/live/stamp_live/listing_form_component.html.leex
+++ b/lib/kamansky_web/live/stamp_live/listing_form_component.html.leex
@@ -46,7 +46,8 @@
       <div class="form-check">
         <%= checkbox f,
           :hipstamp,
-          checked: true
+          checked: true,
+          class: "form-check-input"
         %>
         <label class="form-check-label">Hipstamp</label>
       </div>
