--- a/lib/kamansky_web/live/customer_live/form_component.html.leex
+++ b/lib/kamansky_web/live/customer_live/form_component.html.leex
@@ -32,7 +32,7 @@
     <div class="col form-group required">
       <%= label f,
         :street_address,
-        "Street Address"
+        "Street Address",
         class: "form-control-label"
       %>
       <%= text_input f,
