Form to edit customers

--- a/lib/kamansky_web/live/customer_live/index.html.leex
+++ b/lib/kamansky_web/live/customer_live/index.html.leex
@@ -41,7 +41,7 @@
   <% end %>
 </section>
 <%= if @live_action == :edit do %>
-  <%= live_modal KamanskyWeb.StampReferenceLive.FormComponent,
+  <%= live_modal KamanskyWeb.CustomerLive.FormComponent,
     action: :edit,
     form_id: "customer-form",
     id: "customer-form-modal",
