--- a/lib/kamansky_web/live/order_live/form_component.html.leex
+++ b/lib/kamansky_web/live/order_live/form_component.html.leex
@@ -1,44 +1,46 @@
-<%= f = form_for @changeset,
+<%= f = form_for @order_changeset,
   "#",
   id: @form_id,
   phx_target: @myself,
   phx_change: "validate",
   phx_submit: "submit"
 %>
-  <div class="row">
-    <div class="col-md-6 form-group required">
-      <%= label f, :name, class: "form-control-label" %>
-      <%= text_input f, :name, class: "form-control" %>
+  <%= for cf <- inputs_for(f, :customer) do %>
+    <div class="row">
+      <div class="col-md-6 form-group required">
+        <%= label cf, :name, class: "form-control-label" %>
+        <%= text_input cf, :name, class: "form-control" %>
+      </div>
+      <div class="col-md-6 form-group required">
+        <%= label cf, :email, class: "form-control-label" %>
+        <%= text_input cf, :email, class: "form-control" %>
+      </div>
     </div>
-    <div class="col-md-6 form-group required">
-      <%= label f, :email, class: "form-control-label" %>
-      <%= text_input f, :email, class: "form-control" %>
+    <div class="row">
+      <div class="col form-group required">
+        <%= label cf, :street_address, "Street Address", class: "form-control-label" %>
+        <%= text_input cf, :street_address, class: "form-control" %>
+      </div>
     </div>
-  </div>
-  <div class="row">
-    <div class="col form-group required">
-      <%= label f, :street_address, class: "form-control-label" %>
-      <%= text_input f, :street_address, class: "form-control" %>
+    <div class="row">
+      <div class="col-md-6 form-group required">
+        <%= label cf, :city, class: "form-control-label" %>
+        <%= text_input cf, :city, class: "form-control" %>
+      </div>
+      <div class="col-md-2 form-group required">
+        <%= label cf, :state, class: "form-control-label" %>
+        <%= select cf,
+          :state,
+          states(),
+          class: "choices-select"
+        %>
+      </div>
+      <div class="col-md-4 form-group required">
+        <%= label cf, :zip, class: "form-control-label" %>
+        <%= text_input cf, :zip, class: "form-control" %>
+      </div>
     </div>
-  </div>
-  <div class="row">
-    <div class="col-md-6 form-group required">
-      <%= label f, :city, class: "form-control-label" %>
-      <%= text_input f, :city, class: "form-control" %>
-    </div>
-    <div class="col-md-2 form-group required">
-      <%= label f, :state, class: "form-control-label" %>
-      <%= select f,
-        :state,
-        %{},
-        class: "choices-select"
-      %>
-    </div>
-    <div class="col-md-4 form-group required">
-      <%= label f, :zip, class: "form-control-label" %>
-      <%= text_input f, :zip, class: "form-control" %>
-    </div>
-  </div>
+  <% end %>
   <div class="row">
     <div class="col-md-6 form-group">
       <%= label f, :item_price, "Subtotal", class: "form-control-label" %>
