--- a/lib/kamansky_web/live/order_live/index.html.leex
+++ b/lib/kamansky_web/live/order_live/index.html.leex
@@ -42,6 +42,11 @@
       <%= format_decimal_as_currency(Order.net_profit(@item)) %>
     </td>
     <td>
+      <%= unless Order.completed?(@item) do %>
+        <%= live_patch to: Routes.order_index_path(@socket, :edit, @item), class: "action-icon" do %>
+          <i class="material-icons">edit</i>
+        <% end %>
+      <% end %>
       <%= cond do %>
         <% Order.pending?(@item) -> %>
           <%= live_patch to: Routes.order_index_path(@socket, :mark_processed, @item), class: "action-icon" do %>
@@ -97,6 +102,7 @@
     action: @live_action,
     form_id: "order-form",
     id: "order-form-modal",
+    customer: @customer,
     order: @order,
     title: (if @live_action == :new, do: "Create Order", else: "Update Order"),
     return_to: Routes.order_index_path(@socket, :pending)
