--- a/lib/kamansky_web/live/stamp_live/detail_component.html.leex
+++ b/lib/kamansky_web/live/stamp_live/detail_component.html.leex
@@ -3,15 +3,20 @@
     <div>
       <img
         height="200"
-        src="<%= Routes.static_path(@socket, front_photo_path(@stamp)) %>"
+        src="<%= current_photo(@socket, @stamp) %>"
       />
-      <%= unless is_nil(@stamp.front_photo) or is_nil(@stamp.rear_photo) do %>
+      <%= if display_photo_nav(@stamp) do %>
         <div class="text-center mt-2">
-          <a class="photo-display-link">Front</a> |
           <a
-            class="photo-display-link"
-            data-action="stamp-detail#displayRear"
-            data-stamp-detail-target="photoDisplayRearLink"
+            class="<%= ["photo-display-link"] ++ (if Map.get(@socket.assigns, :current_photo) != :rear, do: [" text-bold"], else: []) %>"
+            phx-click="display_front_photo"
+            phx-target="<%= @myself %>"
+          >Front</a>
+          |
+          <a
+            class="<%= ["photo-display-link"] ++ (if Map.get(@socket.assigns, :current_photo) == :rear, do: [" text-bold"], else: []) %>"
+            phx-click="display_rear_photo"
+            phx-target="<%= @myself %>"
           >Rear</a>
         </div>
       <% end %>
