--- a/lib/kamansky_web/live/stamp_live/detail_component.html.leex
+++ b/lib/kamansky_web/live/stamp_live/detail_component.html.leex
@@ -8,13 +8,15 @@
       <%= if display_photo_nav(@stamp) do %>
         <div class="text-center mt-2">
           <a
-            class="<%= ["photo-display-link"] ++ (if Map.get(@socket.assigns, :current_photo) != :rear, do: [" text-bold"], else: []) %>"
+            href="#"
+            class="<%= ["photo-display-link"] ++ (if Map.get(@socket.assigns, :current_photo) != :rear, do: [" fw-bold"], else: []) %>"
             phx-click="display_front_photo"
             phx-target="<%= @myself %>"
           >Front</a>
           |
           <a
-            class="<%= ["photo-display-link"] ++ (if Map.get(@socket.assigns, :current_photo) == :rear, do: [" text-bold"], else: []) %>"
+            href="#"
+            class="<%= ["photo-display-link"] ++ (if Map.get(@socket.assigns, :current_photo) == :rear, do: [" fw-bold"], else: []) %>"
             phx-click="display_rear_photo"
             phx-target="<%= @myself %>"
           >Rear</a>
