Fixed issue with LiveView not displaying photo

--- a/lib/kamansky_web/live/stamp_live/detail_component.html.leex
+++ b/lib/kamansky_web/live/stamp_live/detail_component.html.leex
@@ -3,7 +3,7 @@
     <div>
       <img
         height="200"
-        src="<%= current_photo(@socket, @stamp) %>"
+        src="<%= @current_photo %>"
       />
       <%= if display_photo_nav(@stamp) do %>
         <div class="text-center mt-2">
