Display photo on order detail page

--- a/lib/kamansky_web/live/order_live/show.html.leex
+++ b/lib/kamansky_web/live/order_live/show.html.leex
@@ -23,7 +23,7 @@
                 height="100"
                 class="me-4"
               />
-            <%# end %>
+            <% end %>
           </td>
           <td style="width: 92%;">
             <%= StampReference.description(listing.stamp.stamp_reference) %><br />
