--- a/lib/kamansky_web/live/customer_live/index.html.leex
+++ b/lib/kamansky_web/live/customer_live/index.html.leex
@@ -31,7 +31,7 @@
   <td><%= @item.name %></td>
   <td><%= Customer.full_address(@item) %></td>
   <td><%= Customer.formatted_email(@item) %></td>
-  <td><%= @item.amount_spent_ytd %></td>
+  <td><%= format_decimal_as_currency(@item.amount_spent_ytd) %></td>
   <td><%= formatted_date(@item.most_recent_order_date) %></td>
   <td>
     <%= live_patch to: Routes.customer_index_path(@socket, :edit, @item), class: "action-icon" do %>
