--- a/lib/kamansky_web/live/stamp_live/form_component.html.leex
+++ b/lib/kamansky_web/live/stamp_live/form_component.html.leex
@@ -8,9 +8,49 @@
   <div class="row">
     <div class="col-md-4 form-group required">
       <%= label f, :scott_number, "Scott Number", class: "form-control-label" %>
-      <%= text_input f, :scott_number, class: "form-control" %>
+      <%= text_input f,
+        :scott_number,
+        class: "form-control",
+        "phx-blur": "find_in_collection",
+        "phx-target": @myself
+      %>
     </div>
-    <div class="col-md-8 form-group required" phx-update="ignore">
+    <div class="col-md-8">
+      <h6>Collection</h6>
+      <%= if @copy_in_collection do %>
+        <div class="d-flex">
+          <div class="me-3">
+            <img
+              height="60"
+              src="
+                <%=
+                  if @copy_in_collection.front_photo do
+                    Attachment.path(@copy_in_collection.front_photo)
+                  else
+                    Routes.static_path(@socket, "/images/blank-stamp.png")
+                  end
+                %>
+              "
+            />
+          </div>
+          <div>
+            <p>
+              <%= StampReference.description(@copy_in_collection.stamp_reference) %><br />
+              <%= Stamp.formatted_grade(@copy_in_collection) %>
+            </p>
+          </div>
+        </div>
+      <% else %>
+        <p>No copy in collection.</p>
+      <% end %>
+    </div>
+  </div>
+  <div class="row">
+    <div class="col-md-3 form-group required">
+      <%= label f, :grade, "Grade", class: "form-control-label" %>
+      <%= number_input f, :grade, class: "form-control" %>
+    </div>
+    <div class="col-md-4 form-group required" phx-update="ignore">
       <%= label f, :format, "Item Type", class: "form-control-label" %>
       <%= select f,
         :format,
@@ -18,11 +58,18 @@
         class: "choices-select"
       %>
     </div>
-  </div>
-  <div class="row">
-    <div class="col form-group required">
-      <%= label f, :grade, "Grade", class: "form-control-label" %>
-      <%= number_input f, :grade, class: "form-control" %>
+    <div class="col-md-5 form-group required d-flex flex-wrap">
+      <%= label f, :add_to, "Add To", class: "form-control-label w-100" %>
+      <div>
+        <div class="form-check form-check-inline">
+          <%= radio_button f, :add_to, :collection, class: "form-check-input" %>
+          <label for="<%= input_id f, :add_to, :collection %>" class="form-check-label">Collection</label>
+        </div>
+        <div class="form-check form-check-inline">
+          <%= radio_button f, :add_to, :stock, class: "form-check-input" %>
+          <label for="<%= input_id f, :add_to, :stock %>" class="form-check-label">Stock</label>
+        </div>
+      </div>
     </div>
   </div>
   <div class="row">
