Allow listing to be listed on Hipstamp

--- a/lib/kamansky_web/live/stamp_live/form_component.html.leex
+++ b/lib/kamansky_web/live/stamp_live/form_component.html.leex
@@ -36,7 +36,8 @@
           <div>
             <p>
               <%= StampReference.description(@copy_in_collection.stamp_reference) %><br />
-              <%= Stamp.formatted_grade(@copy_in_collection) %>
+              <%= Stamp.formatted_grade(@copy_in_collection) %><br />
+              <%= Stamp.formatted_flaws(@copy_in_collection) %>
             </p>
           </div>
         </div>
