--- a/lib/kamansky_web/live/order_live/index.html.leex
+++ b/lib/kamansky_web/live/order_live/index.html.leex
@@ -38,7 +38,7 @@
     <td>
       <%= live_redirect "##{Order.order_number(@item)}", to: Routes.order_show_path(@socket, :show, @item) %>
     </td>
-    <td><%= Calendar.strftime(@item.ordered_at, "%B %-d, %Y") %></td>
+    <td><%= formatted_date(@item.ordered_at) %></td>
     <td><%= format_decimal_as_currency(Order.total_paid(@item)) %></td>
     <td class="<%= if Decimal.gt?(Order.net_profit(@item), 0), do: "text-success", else: "text-danger" %>">
       <%= format_decimal_as_currency(Order.net_profit(@item)) %>
