--- a/lib/kamansky_web/live/listing_live/active.html.leex
+++ b/lib/kamansky_web/live/listing_live/active.html.leex
@@ -17,7 +17,7 @@
         "Grade",
         "Price",
         "Listing Date",
-        "Actions"
+        %{text: "Actions", sort: :disabled}
       ],
     data_count: @data_count,
     data_locator: @data_locator,
