--- a/lib/kamansky_web/live/stamp_live/index.html.leex
+++ b/lib/kamansky_web/live/stamp_live/index.html.leex
@@ -21,8 +21,8 @@
         "Scott Number",
         "Grade",
         "Price Paid",
-        "Flaws",
-        "Actions",
+        %{text: "Flaws", sort: :disabled},
+        %{text: "Actions", sort: :disabled},
       ],
     data_count: @data_count,
     data_locator: @data_locator,
