--- a/lib/kamansky_web/live/stamp_reference_live/index.html.leex
+++ b/lib/kamansky_web/live/stamp_reference_live/index.html.leex
@@ -19,8 +19,8 @@
     headers:
       [
         "Scott Number",
-        "Description",
-        "Actions",
+        %{text: "Description", sort: :disabled},
+        %{text: "Actions", sort: :disabled},
       ],
     data_count: @data_count,
     data_locator: @data_locator,
