--- a/lib/kamansky_web/live/listing_live/sold.html.leex
+++ b/lib/kamansky_web/live/listing_live/sold.html.leex
@@ -24,7 +24,7 @@
     empty_message: "There are no listings to display.",
     options: [
       go_to_record: Map.get(assigns, :go_to_record),
-      sort: %{direction: :desc, column: 1}
+      sort: %{action: :sold, direction: :desc, column: 1}
     ]
   do %>
     <td><%= @item.stamp.scott_number %></td>
