--- a/lib/kamansky_web/live/component_live/table_component.html.leex
+++ b/lib/kamansky_web/live/component_live/table_component.html.leex
@@ -38,6 +38,7 @@
                   phx-click="sort"
                   phx-target="<%= @myself %>"
                   phx-value-sort="<%= index %>"
+                  phx-value-sort_action="<%= Map.get(@socket.assigns, :live_action) %>"
                   phx-value-sort_direction="<%= sort_direction(index, @sort) %>"
                 >
                   <%= header %>
