Fix sorting on all pages

--- a/lib/kamansky_web/live/listing_live/active.html.leex
+++ b/lib/kamansky_web/live/listing_live/active.html.leex
@@ -26,7 +26,8 @@
     options: [
       go_to_record: Map.get(assigns, :go_to_record),
       sort: 0
-    ]
+    ],
+    parent_action: @live_action
   do %>
     <td><%= @item.stamp.scott_number %></td>
     <td>#<%= @item.stamp.inventory_key %></td>
