--- a/lib/kamansky_web/live/listing_live/sold.html.leex
+++ b/lib/kamansky_web/live/listing_live/sold.html.leex
@@ -26,7 +26,7 @@
       go_to_record: Map.get(assigns, :go_to_record),
       sort: %{action: :sold, direction: :desc, column: 1}
     ],
-    parent_action: @live_action
+    parent_action: :sold
   do %>
     <td><%= @item.stamp.scott_number %></td>
     <td><%= formatted_date(@item.order.ordered_at) %></td>
